builds/tests/252/data/attachments/8bfb69a945988399.txt
2026-05-31 06:57:12,785 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-05-31 06:57:12,786 INFO     yoyo.migrations —  - applying step 0
2026-05-31 06:57:12,786 INFO     yoyo.migrations —  - applying step 1
2026-05-31 06:57:12,786 INFO     yoyo.migrations —  - applying step 2
2026-05-31 06:57:12,787 INFO     yoyo.migrations —  - applying step 3
2026-05-31 06:57:12,787 INFO     yoyo.migrations —  - applying step 4
2026-05-31 06:57:12,787 INFO     yoyo.migrations —  - applying step 5
2026-05-31 06:57:12,787 INFO     yoyo.migrations —  - applying step 6
2026-05-31 06:57:12,787 INFO     yoyo.migrations —  - applying step 7
2026-05-31 06:57:12,788 INFO     yoyo.migrations —  - applying step 8
2026-05-31 06:57:12,788 INFO     yoyo.migrations —  - applying step 9
2026-05-31 06:57:12,788 INFO     yoyo.migrations —  - applying step 10
2026-05-31 06:57:12,788 INFO     yoyo.migrations —  - applying step 11
2026-05-31 06:57:12,788 INFO     yoyo.migrations —  - applying step 12
2026-05-31 06:57:12,789 INFO     yoyo.migrations —  - applying step 13
2026-05-31 06:57:12,789 INFO     yoyo.migrations —  - applying step 14
2026-05-31 06:57:12,791 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-05-31 06:57:12,792 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-05-31 06:57:12,793 INFO     yoyo.migrations —  - applying step 0
2026-05-31 06:57:12,793 INFO     yoyo.migrations —  - applying step 1
2026-05-31 06:57:12,794 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-05-31 06:57:12,795 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-05-31 06:57:12,795 INFO     yoyo.migrations —  - applying step 0
2026-05-31 06:57:12,797 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-05-31 06:57:12,797 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-05-31 06:57:12,798 INFO     yoyo.migrations —  - applying step 0
2026-05-31 06:57:12,798 INFO     yoyo.migrations —  - applying step 1
2026-05-31 06:57:12,798 INFO     yoyo.migrations —  - applying step 2
2026-05-31 06:57:12,798 INFO     yoyo.migrations —  - applying step 3
2026-05-31 06:57:12,798 INFO     yoyo.migrations —  - applying step 4
2026-05-31 06:57:12,799 INFO     yoyo.migrations —  - applying step 5
2026-05-31 06:57:12,799 INFO     yoyo.migrations —  - applying step 6
2026-05-31 06:57:12,799 INFO     yoyo.migrations —  - applying step 7
2026-05-31 06:57:12,799 INFO     yoyo.migrations —  - applying step 8
2026-05-31 06:57:12,800 INFO     yoyo.migrations —  - applying step 9
2026-05-31 06:57:12,800 INFO     yoyo.migrations —  - applying step 10
2026-05-31 06:57:12,800 INFO     yoyo.migrations —  - applying step 11
2026-05-31 06:57:12,801 INFO     yoyo.migrations —  - applying step 12
2026-05-31 06:57:12,801 INFO     yoyo.migrations —  - applying step 13
2026-05-31 06:57:12,801 INFO     yoyo.migrations —  - applying step 14
2026-05-31 06:57:12,802 INFO     yoyo.migrations —  - applying step 15
2026-05-31 06:57:12,802 INFO     yoyo.migrations —  - applying step 16
2026-05-31 06:57:12,802 INFO     yoyo.migrations —  - applying step 17
2026-05-31 06:57:12,803 INFO     yoyo.migrations —  - applying step 18
2026-05-31 06:57:12,803 INFO     yoyo.migrations —  - applying step 19
2026-05-31 06:57:12,803 INFO     yoyo.migrations —  - applying step 20
2026-05-31 06:57:12,803 INFO     yoyo.migrations —  - applying step 21
2026-05-31 06:57:12,804 INFO     yoyo.migrations —  - applying step 22
2026-05-31 06:57:12,806 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-05-31 06:57:12,808 INFO     yoyo.migrations — Applying 0005_income_logging
2026-05-31 06:57:12,809 INFO     yoyo.migrations —  - applying step 0
2026-05-31 06:57:12,809 INFO     yoyo.migrations —  - applying step 1
2026-05-31 06:57:12,809 INFO     yoyo.migrations —  - applying step 2
2026-05-31 06:57:12,810 INFO     yoyo.migrations —  - applying step 3
2026-05-31 06:57:12,810 INFO     yoyo.migrations —  - applying step 4
2026-05-31 06:57:12,811 INFO     yoyo.migrations —  - applying step 5
2026-05-31 06:57:12,811 INFO     yoyo.migrations —  - applying step 6
2026-05-31 06:57:12,811 INFO     yoyo.migrations —  - applying step 7
2026-05-31 06:57:12,811 INFO     yoyo.migrations —  - applying step 8
2026-05-31 06:57:12,812 INFO     yoyo.migrations —  - applying step 9
2026-05-31 06:57:12,812 INFO     yoyo.migrations —  - applying step 10
2026-05-31 06:57:12,812 INFO     yoyo.migrations —  - applying step 11
2026-05-31 06:57:12,812 INFO     yoyo.migrations —  - applying step 12
2026-05-31 06:57:12,812 INFO     yoyo.migrations —  - applying step 13
2026-05-31 06:57:12,812 INFO     yoyo.migrations —  - applying step 14
2026-05-31 06:57:12,813 INFO     yoyo.migrations —  - applying step 15
2026-05-31 06:57:12,813 INFO     yoyo.migrations —  - applying step 16
2026-05-31 06:57:12,813 INFO     yoyo.migrations —  - applying step 17
2026-05-31 06:57:12,813 INFO     yoyo.migrations —  - applying step 18
2026-05-31 06:57:12,813 INFO     yoyo.migrations —  - applying step 19
2026-05-31 06:57:12,813 INFO     yoyo.migrations —  - applying step 20
2026-05-31 06:57:12,814 INFO     yoyo.migrations —  - applying step 21
2026-05-31 06:57:12,814 INFO     yoyo.migrations —  - applying step 22
2026-05-31 06:57:12,814 INFO     yoyo.migrations —  - applying step 23
2026-05-31 06:57:12,814 INFO     yoyo.migrations —  - applying step 24
2026-05-31 06:57:12,814 INFO     yoyo.migrations —  - applying step 25
2026-05-31 06:57:12,815 INFO     yoyo.migrations —  - applying step 26
2026-05-31 06:57:12,815 INFO     yoyo.migrations —  - applying step 27
2026-05-31 06:57:12,815 INFO     yoyo.migrations —  - applying step 28
2026-05-31 06:57:12,815 INFO     yoyo.migrations —  - applying step 29
2026-05-31 06:57:12,815 INFO     yoyo.migrations —  - applying step 30
2026-05-31 06:57:12,815 INFO     yoyo.migrations —  - applying step 31
2026-05-31 06:57:12,816 INFO     yoyo.migrations —  - applying step 32
2026-05-31 06:57:12,816 INFO     yoyo.migrations —  - applying step 33
2026-05-31 06:57:12,817 INFO     yoyo.migrations —  - applying step 34
2026-05-31 06:57:12,818 INFO     yoyo.migrations —  - applying step 35
2026-05-31 06:57:12,819 INFO     yoyo.migrations —  - applying step 36
2026-05-31 06:57:12,819 INFO     yoyo.migrations —  - applying step 37
2026-05-31 06:57:12,819 INFO     yoyo.migrations —  - applying step 38
2026-05-31 06:57:12,821 INFO     yoyo.migrations —  - applying step 39
2026-05-31 06:57:12,822 INFO     yoyo.migrations —  - applying step 40
2026-05-31 06:57:12,824 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-05-31 06:57:12,830 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-05-31 06:57:12,832 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 183, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/asyncio/threads.py", line 25, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 469, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
